@@ -1,7 +1,10 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method(AIC,seas)
+S3method(BIC,seas)
 S3method(coef,seas)
 S3method(identify,seas)
+S3method(logLik,seas)
 S3method(monthplot,seas)
 S3method(nobs,seas)
 S3method(plot,seas)
