@@ -71,7 +71,6 @@
 #'   \item{err}{warning messages from X-13ARIMA-SEATS} 
 #'   \item{udg}{content of the \code{.udg} output file} 
 #'   \item{est}{content of the \code{.est} output file} 
-#'   \item{lks}{content of the \code{.lks} output file} 
 #'   \item{model}{list with the model specification, 
 #'   similar to \code{"spc"}. It typically contains \code{"regression"}, which 
 #'   contains the regressors and parameter estimates, and \code{"arima"}, which 
@@ -424,9 +423,6 @@ seas <- function(x, xreg = NULL, xtrans = NULL,
   # browser()
   # read .est file
   z$est <- read_est(iofile)
-
-  # read .lks file
-  z$lks <- read_lks(iofile)
 
   # read .mdl file
   z$model <- try(parse_spc(readLines(paste0(iofile, ".mdl"))), silent = TRUE) 
