@@ -1,8 +1,12 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/diagnostics.R
 \name{qs}
+\alias{AIC.seas}
+\alias{BIC.seas}
 \alias{arimamodel}
 \alias{fivebestmdl}
+\alias{logLik.seas}
+\alias{nobs.seas}
 \alias{qs}
 \alias{spc}
 \alias{transformfunction}
@@ -17,6 +21,14 @@ fivebestmdl(x)
 arimamodel(x)
 
 transformfunction(x)
+
+\method{AIC}{seas}(x)
+
+\method{BIC}{seas}(x)
+
+\method{nobs}{seas}(object, ...)
+
+\method{logLik}{seas}(x)
 }
 \arguments{
 \item{x}{object of class \code{"seas"}}
